# RetailRover

./: .replit  README.md  app.py  pyproject.toml
.streamlit/: config.toml
attached_assets/: Pasted-To-fulfill-your-request-here-s-a-comprehensive-plan-to-build-a-data-analytics-pipeline-that-scrapes-1746690215371.txt
config/: sources.py
data/: __init__.py  historical_products.csv  nbs_data.csv  processed_products.csv  sample_products.json
scrapers/: __init__.py  async_base_scraper.py  async_ecommerce_scraper_template.py  async_jumia_scraper.py  base_scraper.py  ecommerce_scraper_template.py  factory.py  jiji_scraper.py  jumia_scraper.py  konga_scraper.py  nbs_scraper.py  payporte_scraper.py  temu_scraper.py  trafilatura_scraper.py
utils/: __init__.py  data_loader.py  data_processor.py  geo_insights.py  ml_price_predictor.py  recommendation_engine.py  review_analyzer.py  scheduler.py
visualizations/: __init__.py  charts.py
