[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.18",
    "asyncio>=3.4.3",
    "beautifulsoup4>=4.13.4",
    "fuzzywuzzy>=0.18.0",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "python-levenshtein>=0.27.1",
    "requests>=2.32.3",
    "selenium>=4.32.0",
    "streamlit>=1.45.0",
    "trafilatura>=2.0.0",
    "xlsxwriter>=3.2.3",
]
